# Z-PNG-system

./: .gitignore  README.md  convert-svc-说明.md  fix-convert-svc.sh  restart.sh  run.py  start-all-services.sh  start-convert-svc.sh  test-convert-svc.py  文件处理链.md
2025-05-14-16.25/: README.md  check_unused_models.py  config.py  db_manage.py  models.py  optimize_config.py  requirements_simple.txt  run.py  setup_env.sh  start.sh  test_flask.py  update_readme.py  微服务升级说明.md
2025-05-14-16.25/app/: __init__.py
2025-05-14-16.25/archive_files/: create_tables.py  rebuild_archives.py  reset_admin.py  reset_db.py  setup_ubuntu.sh  ubuntu_setup.md
2025-05-14-16.25/instance/: app.db
2025-05-14-16.25/migrations/: create_tables.py
2025-05-14-16.25/new_venv/: pyvenv.cfg
2025-05-14-16.25/src/: .gitignore  README.md  app.py  requirements.txt  run.py  settings.py
2025-05-14-16.25/static/: style.css
2025-05-14-16.25/templates/: base.html  download_list.html  index.html  preview.html  upload.html
archive-svc/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py  start-archive-svc.sh
archive-svc/app/: config.py  main.py
archive-svc/app/api/: __init__.py  schemas.py
archive-svc/app/api/routes/: __init__.py  archive.py  health.py
archive-svc/app/core/: __init__.py  archive_repo.py  repository.py  security.py
archive-svc/app/models/: __init__.py  archive.py  base.py
archive-svc/app/utils/: __init__.py  file_utils.py  hash_utils.py
config/: config.yaml
convert-svc/: .gitignore  Dockerfile  README.md  go.mod
convert-svc/api/: server.go  (+1 more)
(+63 files in other folders)
